# SGDiffusion

./: .gitignore  EXPERIMENT_SETUP_README.md  README.md  pyproject.toml
notebooks/: exp20_model_visualization.ipynb  slice_statistics.csv
notebooks/exp12/: simple_gd_noise.ipynb
notebooks/exp14/: analyze_pca.ipynb
notebooks/exp15/: hessian_analysis.ipynb
notebooks/exp16/: analyze_hessian_eigenvalues.py  analyze_params_trajectory.py
notebooks/exp6/: stoch_gradient_alpha_vs_gauss.ipynb
notebooks/exp8/: alpha_stable.ipynb
scripts/: MLP_MNIST_stats.py  adam_sgd_valley_test.py  exp15_initial_hessians.py  exp15_train_model.py  exp15_trained_hessians.py  exp16_README.md  exp16_continue_and_log.py  exp16_runner.py  exp16_train_to_plateau.py  exp17_README.md  exp17_continue_and_log.py  exp17_runner.py  exp17_train_to_plateau.py  exp18_README.md  exp18_runner.py  exp18_train.py  exp19_README.md  exp19_runner.py  exp19_train.py  exp20_README.md  exp20_runner.py  exp20_train.py  linear_2D.py  pca_weights_trajectory.py  run_exp16.sh  run_exp17.sh  run_exp18.sh  run_exp19.sh  run_exp20.sh  single_valley_test.py  valley_convergence_test.py  visualize_weight_trajectories.py  viz_model.py
src/: _debug.ipynb  model.py  statistic.py  utils.py  visualise_utils.py
src/datamodelopt/: __init__.py
src/datamodelopt/core/: __init__.py  checkpointing.py  config.py  logging.py  registry.py  seed.py  tensor_utils.py
src/datamodelopt/experiments/: __init__.py  pipeline.py  tunnel.py
src/datamodelopt/models/: __init__.py  base.py  factories.py  nanogpt.py
src/datamodelopt/optim/: __init__.py  base.py  factories.py  wrappers.py
src/datamodelopt/tracking/: __init__.py  base.py  grads.py  hessian.py  metrics.py  weights.py
src/datamodelopt/training/: __init__.py  tasks.py  trainer.py
src/datamodelopt/visualization/: __init__.py  plots.py  runner.py
src/scripts/exp1/: README.md
src/scripts/exp1/bash/: run_full_setup.sh  run_gd_many_runs.sh  run_partial_setup.sh  run_val_loss_distribution.sh
src/scripts/exp1/exp_results/: 3_params_limit_of_disstribution_estimation.py  GD_vs_SGD_vs_Adam_noise_analysis.ipynb  different_noises_visualisation.ipynb  exp1_analysis_2_setup.ipynb  exp1_analysis_3_setup.ipynb  exp1_analysis_4_setup.ipynb  noise_analysis_1_setup.ipynb  noise_analysis_Herst_estimation.py  noise_analysis_multidimensional.py  two_parameter_noise_analysis.py
src/scripts/exp1/python_scripts/: create_data.py  gd_many_runs.py  sgd_hessians.py  sgd_many_runs.py  train_gd.py  train_sgd.py  val_loss_distribution.py
src/scripts/exp2/bash/: run_full_setup.sh  run_gd_many_runs.sh  run_partial_setup.sh  run_val_loss_distribution.sh
src/scripts/exp2/exp_results/: GD_vs_SGD_vs_Adam_noise_analysis.ipynb
src/scripts/exp5/: README.md  __init__.py  aggregate_tensors.py  aggregate_tunnel.py  prepare_manysgd_viz.py  presets.py  run_pipeline.py  run_stage.py  run_tunnel.py  test_metadata.py  visualize.py  visualize_many_runs.py  visualize_tunnel.py
src/scripts/exp6/: ADDITIONAL_EXPERIMENTS_SECTION.tex  EXPERIMENT_SECTION_ROADMAP.md  LANGEVIN_CHECK.md  PAPER_READY_EXPERIMENT_PACK.md  README.md  RESULTS_SUMMARY.md  reproduce_all.sh
tests/: __init__.py  conftest.py  test_config.py  test_integration.py  test_json_config.py  test_oop_quality.py  test_registry.py  test_tunnel_pipeline.py
(+965 files in other folders)
